--- a/index.html
+++ b/index.html
@@ -50,10 +50,6 @@
             <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
               <div class="progress-bar color-bar" style="width: 60%">60%</div>
             </div>
-            <p class="text-center">JS</p>
-            <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100">
-              <div class="progress-bar color-bar" style="width: 35%">35%</div>
-            </div>
             <p class="text-center">Bootstrap</p>
             <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
               <div class="progress-bar color-bar" style="width: 40%">40%</div>
@@ -101,7 +97,7 @@
         </div>
         <div class="row align-items-center mb-5">
           <div class="col-lg-7 col-sm-12">
-            <h5 class="text-center">Цілеспрямований у галузі web-розробки з досвідом у написанні сайтів. Володію мовами програмування HTML, CSS та JS, є досвід роботи з базами даних, а також з Bootstrap. Готовий до постійного навчання та розвитку своїх навичок у цій сфері. Закінчив коледж за спеціальністю «Інженерія програмного забезпечення», продовжую навчання в університеті ХДУ на тій самій спеціальності.</h5>
+            <h5 class="text-center">Цілеспрямований у галузі web-розробки з невеликим досвідом у написанні сайтів. Володію мовами програмування HTML, CSS, є досвід роботи з базами даних, а також з Bootstrap. Готовий до постійного навчання та розвитку своїх навичок у цій сфері. Закінчив коледж за спеціальністю «Інженерія програмного забезпечення», продовжую навчання в університеті ХДУ на тій самій спеціальності. Наразі знаходжусь У Львові та можу працювати онлайн.</h5>
           </div>
           <div class="col-lg-5 col-sm-12 mb-sm-5 mt-sm-5 text-center">
             <img src="/photo/photo_5300905347927626071_y.jpg" alt="фото" class="img-fluid">
