--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
         <div class="row align-items-center mb-5">
           <div class="col-lg-7 col-sm-12">
-            <h5 class="text-center">Цілеспрямований у галузі web-розробки з досвідом у написанні сайтів. Володію мовами програмування HTML, CSS та JS, є досвід роботи з базами даних, а також з Bootstrap. Готовий до постійного навчання та розвитку своїх навичок у цій сфері. Закінчив коледж за спеціальністю «Інженерія програмного забезпечення», продовжую навчання в університеті ХДУ на тій самій спеціальності.</h5>
+            <h5 class="text-center">Цілеспрямований у галузі web-розробки з досвідом у написанні сайтів. Володію мовами програмування HTML, CSS та JS, є досвід роботи з базами даних MySQL, а також з Bootstrap. Готовий до постійного навчання та розвитку своїх навичок у цій сфері. Закінчив коледж за спеціальністю «Інженерія програмного забезпечення», продовжую навчання в університеті ХДУ на тій самій спеціальності.</h5>
           </div>
           <div class="col-lg-5 col-sm-12 mb-sm-5 mt-sm-5 text-center">
             <img src="/photo/photo_5300905347927626071_y.jpg" alt="фото" class="img-fluid">
